--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ lsi: false
 
 permalink: /:year-:month-:day-:title.html
 paginate: 5
-title: Arduino Minas - Projetos
+title: Arduino Minas
 description: Página dos projetos hospedados no GitHub, criados e desenvolvidos no Arduino Minas
 url: http://arduino-minas.github.com/
 author: Carlos Delfino
