--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,12 @@ lsi: true
 permalink: /:year-:month-:day-:title.html
 
 title: Arduino Minas
+slogan: Tecnologia, Criatividade e Conhecimento Compartilhado
 
 description: Página dos projetos hospedados no GitHub, criados e desenvolvidos no Arduino Minas
 url: http://arduinominas.com.br/
+uri: arduinominas.com.br
+logo: /images/logo/logo-318x330x72.png
 author: Carlos Delfino (@CarlosDelfino), Fernando Passe (@fernandopasse)
   
-exclude: [Rakefile, rakefile, makefile, README.md, LICENSE, 'README.markdown', 'README_FOR_COLLABORATORS.markdown', 'Gemfile.lock', 'Gemfile']
+exclude: [Rakefile, rakefile, makefile, README.md, LICENSE, 'README.markdown', 'README_FOR_COLLABORATORS.markdown', 'Gemfile.lock', 'Gemfile', '*.old']
