melhoria no código relativo as redes sociais.

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Arduino Minas
 slogan: Tecnologia, Criatividade e Conhecimento Compartilhado
 
 description: Página dos projetos hospedados no GitHub, criados e desenvolvidos no Arduino Minas
-url: http://arduinominas.com.br/
+url: http://arduinominas.com.br
 uri: arduinominas.com.br
 
 logo: /images/logo/logo-318x330x72.png
