--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,49 @@
-title: Arduino Minas
-description: Um espaço para amigos de Minas atuarem com projetos usando Arduino, AVR, ARM, ESP8266 entre outros
-gems:
-  - jekyll-redirect-from
-  
-whitelist:
-  - jekyll-redirect-from
+# Site
+name: Arduino Minas
+description: Cursos Arduino Minas, do Arduino ao Universo de Tecnologias para o sucesso de seu projeto!
+meta_description: "Um lugar para construir seu projeto e desenvolver novas ideias!"
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/favicon.ico'
+paginate: 12
+baseurl: 
+email: 'consultoria@carlosdelfinfo.eti.br'
+disqus: 'carlosdelfino'
+sharethis: 
+  property: '5b326ee13e2f6e001148ddca'
+  product: 'sticky-share-buttons'
+google_analytics: "UA-21710445-1"
+locale: "pt_BR"
+lang: "pt_BR"
+charset: "utf-8"
+encoding: "utf-8" 
+author: delfino
+
+github: 
+  org: ArduinoMinas
+facebook:
+  fanpage: cursoarduinominas
+
+# Plugins
+plugins: 
+  - jekyll-paginate
+  - jekyll-archives
+    
+# Archives
+jekyll-archives:
+  enabled:
+    - categories
+  layout: archive
+  permalinks:
+    category: '/category/:name/'
+    
+# Other
+markdown: kramdown
+highlighter: rouge
+
+# MailChip
+mailchimp:
+  show: false
+
+## ads
+ads:
+  show: true
