Adicionado o Edwaldo, colaborador nos projetos sociais em BH.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,3 +6,12 @@ delfino:
   web: https://facebook.com/professorcarlosdelfino/
   twitter: https://twitter.com/fullsrv
   description: "30 anos atuando no setor de TICs, 5 anos atuando como consultor em projetos com Arduino e outros módulos."
+
+edwaldo:
+  name: Edwaldo
+  display_name: Edwaldo
+  gravatar: 
+  email: 
+  web: 
+  twitter: 
+  description: "Parceiro em BH/Minas Gerais do curso Arduino Minas."
