Melhorias na geração de páginas por categoria

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ jekyll-archives:
     - tags
   layout: archive
   permalinks:
-    category: '/categoria/:name/'
+    category: '/:name/'
     tag: '/tag/:name/'
     
 # Other
