--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: Arduino Minas
-description: Cursos Arduino Minas, do Arduino ao Universo de Tecnologias para o sucesso de seu projeto!
+name: Curso Maker
+description: Curso Maker, do Arduino ao Universo de Tecnologias para o sucesso de seu projeto!
 meta_description: "Um lugar para construir seu projeto e desenvolver novas ideias!"
 paginate: 12
 email: 'consultoria@carlosdelfinfo.eti.br'
@@ -26,15 +26,19 @@ images:
 author: delfino
 
 github: 
-  org: ArduinoMinas
+  org: CursoMaker
 facebook:
-  fanpage: cursoarduinominas
+  fanpage: CursoMaker
 
 # Plugins
 plugins: 
+  - jekyll-feed
+  - jekyll-gist
   - jekyll-paginate
   - jekyll-archives
-    
+  - jekyll-redirect-from
+  - jekyll-jupyter-notebook
+     
 # Archives
 jekyll-archives:
   enabled:
@@ -59,5 +63,7 @@ ads:
   show: true
 
 exclude: 
-  - /assets/images/logo.xcf,
-  - /assets/images/react_redux.xcf]
+  - Gemfile
+  - Gemfile.lock
+  - /assets/images/logo.xcf
+  - /assets/images/react_redux.xcf
